@@ -3,7 +3,7 @@ SECTIONS
   PROVIDE (foo = 1);
   PROVIDE (bar = 2);
   PROVIDE (baz = 3);
-  .data :
+  .data 0x2000 :
   {
     *(.data)
   }
